@@ -25,4 +25,4 @@ libpcmanx_core_la_SOURCES = \
 	widget.cpp widget.h \
 	termview.cpp termview.h \
 	termsel.cpp termsel.h \
-	fileutil.c fileutil.h
+	fileutil.cpp fileutil.h
